# mlua-generics

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  parse_table.rs  proxy_table.rs
common/src/_scripts/: parsing_metatable.lua
common/tests/: generic_struct.rs  mod.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
proc-macro/src/concrete/: mod.rs
proc-macro/src/concrete_global/: mod.rs  user_data.rs
tests/: Cargo.toml
tests/src/: lib.rs
